Fixed sliders to be displayed properly on tablets and phones

--- a/css/media.css
+++ b/css/media.css
@@ -10,6 +10,15 @@
 	.hidden-sm{
 		display: none;
 	}
+
+	#content{
+	  overflow: visible;
+	  height: 100%;
+	}
+
+	#content .big[type="twink"]{
+		height: 10px;
+	}
 }
 
 /* Small Devices, Tablets */
