--- a/ftp/css/style.css
+++ b/ftp/css/style.css
@@ -801,7 +801,7 @@ paralax div:after {
   top: 150px;
   transform: translateY(0) translateZ(0);
   transition: 1.7s;
-  padding-bottom: 45px;
+  padding-bottom: 0px;
 }
 #content #circleContent {
   padding-bottom: 50px;
@@ -1651,9 +1651,9 @@ paralax div:after {
 footer {
   position: fixed;
   width: 100%;
-  /*height: 45px;*/
-  height: 0;
-  bottom: 0px;
+  height: 45px;
+  /*height: 0;*/
+  bottom: -45px;
   background: #1e303e;
   transition: 0.5s;
 }
